fixed margin, height and section problem on pages on Dark mode

--- a/src/components/FoodListItem/FoodListItem.module.css
+++ b/src/components/FoodListItem/FoodListItem.module.css
@@ -2,11 +2,13 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: fit-content;
+    height: 100%;
     align-items: center;
     justify-content: center;
     padding-bottom: 2rem;
     padding-top: 2rem;
+    background-color: var(--background-color);
+    color: var(--main-color);
 }
 
 .mustTry {
