--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
  
 }
 
-
+html, body, #root {
+  height: 100%;
+}
 
 
